--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
 }
