Added Food List Basic Functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'org.greenrobot:eventbus:3.2.0'
 
 }
