--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,7 @@ dependencies {
     implementation 'androidx.room:room-rxjava2:2.2.5'
     implementation "androidx.room:room-runtime:2.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
+    implementation 'com.github.andremion:counterfab:1.2.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
 }
