--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:label="@string/title_activity_home">
         </activity>
         <activity android:name=".SignUp" />
         <activity android:name=".SignIn" />
