Added delivery person view orders, call and remove order fucntionality. Sign In pending

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,7 @@ dependencies {
     //For maps
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.karumi:dexter:6.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
 }
